# gpu-parking-tax

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
analysis/: generate_paper_figures.py  phase1_telemetry.py  phase2_controlled.py  sensitivity_analysis.py  supplementary_figures.py
analysis/results/: gpu_profiles.csv  gpu_summary.csv  phase1_results.json  phase2_results.json  scheduler_results.json  sensitivity_results.json
api/: config.py  data_loader.py  main.py
api/routers/: anomalies.py  correlations.py  distributions.py  gpus.py  overview.py  profiling.py  temporal.py  workloads.py
dashboard/: package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/anomalies/: page.tsx
dashboard/src/app/correlations/: page.tsx
dashboard/src/app/distributions/: page.tsx
dashboard/src/app/gpus/: page.tsx
dashboard/src/app/profiling/: page.tsx
dashboard/src/app/temporal/: page.tsx
dashboard/src/app/workloads/: page.tsx
dashboard/src/components/: Card.tsx  PlotlyChart.tsx  Providers.tsx  Sidebar.tsx
dashboard/src/lib/: api.ts  colors.ts  store.ts
data/experiments/: a100_dose_response.jsonl  a100_exploratory.jsonl  h100_cold_start_traces.jsonl  h100_dose_response.jsonl  h100_model_validation.jsonl  h100_quick_test.jsonl  h100_validation_manifest.json  l40s_dose_response.jsonl  l40s_exploratory.jsonl
experiments/: dose_response.py  model_validation.py  scheduler_simulation.py
paper/: parking_tax.tex
scraper/: config.yaml  preprocess.py  quick_test.py  scrape.py  validate.py  workload_classifier.py
