[project]
name = "gpu-parking-tax"
version = "0.1.0"
description = "The Model Parking Tax: quantifying idle GPU power across architectures"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "torch>=2.1",
]
